--- a/style/window.css
+++ b/style/window.css
@@ -1,9 +1,17 @@
 #container{
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     padding: 1em;
     display: inline-block;
     min-width: 360px;
-    width: 100% ; 
-    height: auto ;
     clear: left;
     box-sizing: border-box;
+    padding:0;
+}
+
+#WindowView{
+    height:100%;
+    margin:0;
 }
