--- a/style/setting.css
+++ b/style/setting.css
@@ -8,3 +8,17 @@
     color:white;
     background: linear-gradient(to bottom,#7598ef,#0e52f2);
 }
+
+#setting_container{
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding: 1em;
+    display: inline-block;
+    min-width: 360px;
+    clear: left;
+    box-sizing: border-box;
+    padding:0;
+    position: absolute;
+}
