--- a/style/toolbar.css
+++ b/style/toolbar.css
@@ -7,6 +7,7 @@
     height: 22px;
     display: inline-block;
     vertical-align: text-top;
+    padding: 8px 10px;
 }
 #window_toolbar.fadein{
     opacity: 1;
