--- a/style/window.css
+++ b/style/window.css
@@ -3,18 +3,15 @@
     left: 0;
     width: 100%;
     height: 100%;
-    padding: 1em;
     display: inline-block;
     min-width: 360px;
     clear: left;
     box-sizing: border-box;
-    padding:0;
     position: absolute;
+    transition: top .1s cubic-bezier(0.4,0.0,1,1);
+
 }
-#window_container > iframe{
-    border:1px solid red;
-    opacity: 0.5;
-}
+
 
 #WindowView{
     height:100%;
