--- a/style/window.css
+++ b/style/window.css
@@ -9,7 +9,10 @@
     box-sizing: border-box;
     position: absolute;
     transition: top .1s cubic-bezier(0.4,0.0,1,1);
-
+}
+#window_favicon{
+    background-color: transparent;
+    float:left;
 }
 
 
