--- a/style/setting.css
+++ b/style/setting.css
@@ -28,3 +28,13 @@
     min-height: 20px;
     margin:2px;
 }
+.visitlist_favicon{
+    pointer-events: none;
+    display: inline-block;
+    width: 16px;
+    height: 16px;
+    margin: 0 5px 0 auto;
+    position: relative;
+    top: 1px;
+    background-color:#ffffff;
+}
