--- a/style/toolbar.css
+++ b/style/toolbar.css
@@ -2,15 +2,13 @@
     position: absolute;
     top:0;
     right: 0;
-    z-index: 9999;
-    opacity: 1;
+    z-index: 999;
     height: 24px;
     display: inline-block;
     vertical-align: text-top;
     padding: 8px 10px;
-
     width:calc(100vw - 20px);
-    background:#636363;
+    background:#3d4044;
 }
 
 .detect.window_toolbar_movedown{
@@ -20,8 +18,6 @@
     opacity: 0;
     top:-38px
 }
-
-
 .detect.window_toolbar_moveup::after{
     content:"";
     position: fixed;
@@ -31,10 +27,8 @@
     right:0;
 }
 
-
 #window_title{
     right:0;
-    pointer-events: none;
     line-height: 23px;
     font-size: 10pt;
     color: white;
@@ -52,11 +46,9 @@
     margin: 0 5px 0 auto;
     position: relative;
     top: 3px;
-    background:#636363;
-    background-color:#636363;
+    background:#3d4044;
+    background-color:#3d4044;
 }
-
-
    #window_dragarea{
        position: absolute;
        width:100%;
@@ -100,6 +92,7 @@
 .window_btn:hover{
     filter: brightness(1.75);
 }
+
 #fix_window_btn{
     background: url("../image/pick.png") no-repeat;
 }
